<resources>
    <string name="app_name">Tour Guide Islamabad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="string_cityscape_1">Civic administration</string>
    <string name="string_cityscape_2">The Islamabad Capital Territory (ICT) Administration, generally known as ICT Administration or Islamabad Administration, is the civil administration as well as main law and order agency of the Federal Capital.\n
The local government authority of the city is the Islamabad Metropolitan Corporation (IMC) with some help from Capital Development Authority (CDA), which oversees the planning, development, construction, and administration of the city. Islamabad Capital Territory is divided into eight zones: Administrative Zone, Commercial District, Educational Sector, Industrial Sector, Diplomatic Enclave, Residential Areas, Rural Areas and Green Area. Islamabad city is divided into five major zones: Zone I, Zone II, Zone III, Zone IV, and Zone V. Out of these, Zone IV is the largest in area. Zone I consists mainly of all the developed residential sectors while Zone II consists of the under-developed residential sectors. Each residential sector is identified by a letter of the alphabet and a number, and covers an area of approximately 2 km × 2 km (1 1⁄4 mi × 1 1⁄4 mi). The sectors are lettered from A to I, and each sector is divided into four numbered sub-sectors.\n
</string>
    <string name="string_cityscape_3">Sectors</string>
    <string name="string_cityscape_4">Series A, B, and C are still underdeveloped. The D series has seven sectors (D-11 to D-17), of which only sector D-12 is completely developed. This series is located at the foot of Margalla Hills. The E Sectors are named from E-7 to E-17. Many foreigners and diplomatic personnel are housed in these sectors. In the revised Master Plan of the city, CDA has decided to develop a park on the pattern of Fatima Jinnah Park in sector E-14. Sectors E-8 and E-9 contain the campuses of Bahria University, Air University, and the National Defence University. The F and G series contains the most developed sectors. F series contains sectors F-5 to F-17; some sectors are still under-developed. F-5 is an important sector for the software industry in Islamabad, as the two software technology parks are located here. The entire F-9 sector is covered with Fatima Jinnah Park. The Centaurus complex is a major landmark of the F-8 sector. G sectors are numbered G-5 through G-17. Some important places include the Jinnah Convention Centre and Serena Hotel in G-5, the Red Mosque in G-6, the Pakistan Institute of Medical Sciences, the largest medical complex in the capital, located in G-8, and the Karachi Company shopping center in G-9.\n
The H sectors are numbered H-8 through H-17. The H sectors are mostly dedicated to educational and health institutions. National University of Sciences and Technology covers a major portion of sector H-12. The I sectors are numbered from I-8 to I-18. With the exception of I-8, which is a well-developed residential area, these sectors are primarily part of the industrial zone. Currently two sub-sectors of I-9 and one sub-sector of I-10 are used as industrial areas. CDA is planning to set up Islamabad Railway Station in Sector I-18 and Industrial City in sector I-17. Zone III consists primarily of the Margalla Hills and Margalla Hills National Park. Rawal Lake is in this zone. Zone IV and V consist of Islamabad Park, and rural areas of the city. The Soan River flows into the city through Zone V.\n
</string>
    <string name="string_cityscape_5">Islamabad/Rawalpindi Metropolitan Area</string>
    <string name="string_cityscape_6">When the master plan for Islamabad was drawn up in 1960, Islamabad and Rawalpindi, along with the adjoining areas, was to be integrated to form a large metropolitan area called Islamabad/Rawalpindi Metropolitan Area. The area would consist of the developing Islamabad, the old colonial cantonment city of Rawalpindi, and Margalla Hills National Park, including surrounding rural areas. However, Islamabad city is part of the Islamabad Capital Territory, while Rawalpindi is part of Rawalpindi District, which is part of province of Punjab .\n
Initially, it was proposed that the three areas would be connected by four major highways: Murree Highway, Islamabad Highway, Soan Highway, and Capital Highway. However, to date only two highways have been constructed: Kashmir Highway (the former Murree Highway) and Islamabad Highway. Plans of constructing Margalla Avenue are also underway. Islamabad is the hub all the governmental activities while Rawalpindi is the centre of all industrial, commercial, and military activities. The two cities are considered sister cities and are highly interdependent.\n
</string>
    <string name="string_cityscape_7">Architecture</string>
    <string name="string_cityscape_8">Islamabad\'s architecture is a combination of modernity and old Islamic and regional traditions. The Saudi-Pak Tower is an example of the integration of modern architecture with traditional styles. The beige-coloured edifice is trimmed with blue tile works in Islamic tradition, and is one of Islamabad\'s tallest buildings. Other examples of intertwined Islamic and modern architecture include Pakistan Monument and Faisal Mosque. Other notable structures are: Secretariat Complex designed by Gio Ponti, Prime Minister\'s secretariat based on Mughal architecture and the National Assembly by Edward Durell Stone.\n
The murals on the inside of the large petals of Pakistan Monument are based on Islamic architecture. The Shah Faisal Mosque is a fusion of contemporary architecture with a more traditional large triangular prayer hall and four minarets, designed by Vedat Dalokay, a Turkish architect and built with the help of funding provided by King Faisal of Saudi Arabia. The architecture of Faisal Mosque is unusual as it lacks a dome structure. It is a combination of Arabic, Turkish, and Mughal architectural traditions. The Centaurus is an example of modern architecture under construction in Islamabad. The seven star hotel was designed by WS Atkins PLC.The newly built Islamabad Stock Exchange Towers is another example of modern architecture in the city.\n

</string>
    <string name="string_demographics_1">Language</string>
    <string name="string_demographics_2">According to 1998 census, the mother tongue of the majority of the population is Punjabi at 68%, and the major dialect is Pothohari, 15% of the population are Pashto speakers, while 18% speak other languages. Similarly according to 1998 census, the total migrant population of the city is 1 million, with the majority (691,977) coming from Punjab. Around 210,614 of the migrated population came from Sindh and rest from Khyber Pakhtunkhwa and Azad Kashmir. Smaller populations emigrated from Balochistan, and Gilgit–Baltistan.</string>
    <string name="string_demographics_3">Literacy</string>
    <string name="string_demographics_4">The majority of the population lies in the age group of 15–64 years, around 59.38%. Only 2.73% of the population is above 65 years of age; 37.90% is below the age of 15. Islamabad has the highest literacy rate in Pakistan, at 88%. 9.8% of the population has done intermediate education (equivalent to grades 11 and 12). 10.26% have a bachelor or equivalent degree while 5.2% have a master or equivalent degree. The labour force of Islamabad is 185,213 and the unemployment rate is 15.70%.</string>
    <string name="string_demographics_5">Religion</string>
    <string name="string_demographics_6">Islam is the largest religion in the city, with 95.53% of the population Muslim. In rural areas this percentage is 98.80%. Per 1998 census in urban areas the percentage of Muslims is 97.83%. The second largest religion is Christianity, with 4.07% of the population, 0.94% in rural areas and 5.70% in the city. Hinduism accounts for 0.02% of the population, and other minorities 0.03%.</string>
    <string name="string_recreation_places_in_islamabad_1">Faisal Mosque </string>
    <string name="string_recreation_places_in_islamabad_2">Located in Islamabad, Pakistan, the Faisal Mosque is the largest mosque in South Asia and the fourth largest mosque in the world. Built in the year 1986, it was named after the late king of Saudi Arabia, Faisal Bin Abdul Aziz, who backed and financed the construction.</string>
    <string name="string_recreation_places_in_islamabad_3">Trail 3</string>
    <string name="string_recreation_places_in_islamabad_4">The most famous and oldest hiking track of Islamabad is Trail 3. It starts from the Margalla road sector F-6. The trail is exhausting to some extent, due to steep hills. The course leads to the point where it goes up to the Viewpoint and is about a 30 – 50 minutes track. After the Viewpoint it continues for another easy-going 45 – 60 minutes and reaches the Pir Sohawa, where there are two restaurants for food, The Monal and La Montana. In total, it is approximately a one-hour and thirty minute walk.</string>
    <string name="string_recreation_places_in_islamabad_5">Pakistan National Monument</string>
    <string name="string_recreation_places_in_islamabad_6">Located in Islamabad, the Pakistan National Monument is a representation of the four provinces and three territories of the nation. Designed by the famous architect, Arif Masood, this blooming flower shaped structure reflects the progress and prosperity of Pakistan.</string>
    <string name="string_transport_1">Air</string>
    <string name="string_transport_2">Islamabad is connected to major destinations around the world through Islamabad International Airport. The airport is the largest in Pakistan and is located outside Islamabad in Fateh Jang.</string>
    <string name="string_transport_3">Public transport</string>
    <string name="string_transport_4">The Rawalpindi-Islamabad Metrobus is a 24 km (14.9 mi) bus rapid transit system that serves the twin cities of Rawalpindi and Islamabad in Pakistan. It uses dedicated bus lanes for all of its route covering 24 bus stations. This service covers a huge distance from city Saddar, Rawalpindi to Pak-Secretariat, Islamabad. This service is very reliable and consistent, and the labour force as well as students are using this government provided service on a daily basis. It has reduced the time consumption by reducing the route. Now this bus service is being extended to more areas in Islamabad that include areas near G-13 and H-12. Work is currently being done to keep it along the Kashmir Highway.</string>
    <string name="string_transport_5">Private transport</string>
    <string name="string_transport_6">People use private transport like Taxis, Careem, Uber, Bykea, and SWVL for local journeys. In March 2016, Careem became functional in Islamabad and Rawalpindi with taxi services.</string>
</resources>