<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cityscape.CityscapeFragment"
    android:layout_margin="5dp">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cityscape_layout_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cityscape_layout_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_2" />

        <ImageView
            android:id="@+id/cityscape_layout_img12"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/img12" />

        <TextView
            android:id="@+id/cityscape_layout_txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cityscape_layout_txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_4" />

        <ImageView
            android:id="@+id/cityscape_layout_img13"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:src="@drawable/img13" />

        <TextView
            android:id="@+id/cityscape_layout_txt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_5"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cityscape_layout_txt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_6" />


        <TextView
            android:id="@+id/cityscape_layout_txt7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_7"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cityscape_layout_txt8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_cityscape_8" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>